<resources>
    <string name="app_name">Aniscore</string>
    <string name="home_rank">热门番剧</string>
    <string name="home">Home</string>
    <string name="season">Season</string>
    <string name="rank">Rank</string>
    <string name="user">User</string>
    <string name="viewMore">更多</string>
    <string name="full_rank">番剧排行榜</string>
    <string name="season_list">分季列表</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="login">Log in</string>
    <string name="notify_login">Login to see your account</string>
    <string name="select_image">Select Image</string>
    <string name="upload">Upload</string>
    <string name="scored_bangumi">Bangumi</string>
    <string name="following">Followings</string>
    <string name="follower">Followers</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">follow</string>
    <string name="no_score_bangumi">No scored bangumi</string>
    <string name="no_following">No following</string>
    <string name="no_follower">No follower</string>
    <string name="info">Information</string>
    <string name="comment">Comments</string>
    <string name="original_name">Original Name</string>
    <string name="other_names">Similar Names</string>
    <string name="synopsis">Synopsis</string>
    <string name="not_found">Not Found</string>
    <string name="view_all_replies">View all replies</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="set_password">Password must be at least 8 characters</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
</resources>
