<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/background"
            app:layout_constraintBottom_toTopOf="@id/rank_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/rank_title"
            android:text="@string/home_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="8pt"
            android:textStyle="bold"
            android:width="20dp"
            android:textColor="@color/titleColor"
            app:layout_constraintTop_toBottomOf="@id/background_image"
            app:layout_constraintBottom_toTopOf="@id/rank_list"/>

        <TextView
            android:id="@+id/to_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/full_rank"
            android:drawableRight="@drawable/arrow_icon"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rank_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/rank_title" />

        <View
            android:id="@+id/divider_1"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dfdfdf"
            app:layout_constraintBottom_toTopOf="@id/current_season_title"
            app:layout_constraintTop_toBottomOf="@id/rank_list"/>

        <TextView
            android:id="@+id/current_season_title"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin = "7dp"
            android:textSize="8pt"
            android:textColor="@color/titleColor"
            app:layout_constraintTop_toBottomOf="@id/divider_1"/>

        <TextView
        android:id="@+id/to_season_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        android:layout_margin="10dp"
        android:text="@string/season_list"
        android:drawableRight="@drawable/arrow_icon"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/current_bangumi_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/current_season_title" />

        <View
            android:id="@+id/divider_2"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dfdfdf"
            app:layout_constraintTop_toBottomOf="@id/current_bangumi_list"/>

        <TextView
            android:id="@+id/previous_season_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="8pt"
            android:layout_margin="7dp"
            android:textColor="@color/titleColor"
            app:layout_constraintTop_toBottomOf="@id/divider_2"/>

        <TextView
            android:id="@+id/to_season_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_2"
            android:layout_margin="10dp"
            android:text="@string/season_list"
            android:drawableRight="@drawable/arrow_icon"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/previous_bangumi_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/previous_season_title" />

        <View
            android:id="@+id/divider_3"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dfdfdf"
            app:layout_constraintTop_toBottomOf="@id/previous_bangumi_list"/>

        <TextView
            android:id="@+id/before_previous_season_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="8pt"
            android:layout_margin = "7dp"
            android:textColor="@color/titleColor"
            app:layout_constraintTop_toBottomOf="@id/divider_3"/>

        <TextView
            android:id="@+id/to_season_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_3"
            android:layout_margin="10dp"
            android:text="@string/season_list"
            android:drawableRight="@drawable/arrow_icon"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/before_previous_bangumi_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/before_previous_season_title"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>